Improve breadcrumb formatting - Parts no longer wrap - Whole breadcrumb is constrained to 75% screen width so color mode toggler won't overlap them - Each part gets truncated with "..." if too long (prioritizing last part)

--- a/web/shared-v1.css
+++ b/web/shared-v1.css
@@ -52,6 +52,10 @@ header {
     animation-timing-function: ease;
 }
 
+.dan-project-breadcrumb>li:last-child {
+    max-width: 60%;
+}
+
 /* Inspired by https://css-tricks.com/making-css-animations-feel-natural */
 @keyframes bounce {
     0% {
